# irving

./: .editorconfig  .gitignore  .pylintrc  LICENSE  Makefile  README.md  setup.cfg  tox.ini
irving/: __main__.py
irving/autotrader/: __init__.py  models.py  parser.py
irving/cli/: __init__.py  main.py
irving/cli/autotrader/: __init__.py  commands.py  groups.py
irving/core/: __init__.py  csv.py  models.py
tests/autotrader/: search-results-1.html  search-results-2.html  test_parser.py
