[metadata]
name = irving
version = attr: irving.__version__
author = Jonathan Foster
author_email = jonathan@jonathanfoster.io
description = Irving helps you estimate how much your car is worth.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
  Source = https://github.com/jonathanfoster/irving

[options]
python_requires = >=3.10
packages = find:
install_requires =
  beautifulsoup4
  click
  jsonpickle
  requests

[options.entry_points]
console_scripts =
  irving = irving.cli:main

[options.extras_require]
dev =
  black
  pylint
  pylint-runner
  pytest
  pytest-cov
  tox
